# teo-nodejs

./: .gitignore  .npmignore  Cargo.toml  README.md  example.js  example.ts  index.d.ts  index.js  package.json  schema.teo  teo.js  test.d.ts  test.js  try.js  tsconfig.json
.github/workflows/: CI.yml  CI_old.yml
__test__/: index.spec.js  index.spec.mjs
__test__/helpers/: builtinReq.ts  schemaPathArgs.ts
__test__/runtime/request/: app.ts  request.spec.ts
lib/: test.js  test.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: copyTestSchemas.js  fixFiles.js  passRequire.js
src/: lib.rs  lib_backup.rs  value.rs
src/app/: app.rs  app_backup.rs  mod.rs  new_app.rs
src/console/: mod.rs
src/cookies/: cookie.rs  cookies.rs  expiration.rs  mod.rs
src/dynamic/: builder.rs  create.rs  dynamic.rs  fetch.rs  mod.rs  query.rs  synthesize.rs
src/enum/: enum.rs  mod.rs
src/functions/: mod.rs
src/handler/: group.rs
src/headers/: headers.rs  mod.rs
src/middleware/: mod.rs
src/model/: mod.rs  model.rs
src/namespace/: mod.rs  namespace.rs
src/object/: arguments.rs  array.rs  carry_over.rs  interface_enum_variant.rs  mod.rs  model.rs  pipeline.rs  promise.rs  promise_or_ignore.rs  struct.rs  unknown.rs  unused.rs  value.rs
src/pipeline/: ctx.rs  mod.rs  pipeline.rs
src/request/: cookie.rs  ctx.rs  handler_match.rs  header_map.rs  mod.rs  request.rs  send_next.rs
src/response/: header_map.rs  mod.rs  response.rs  response_or_promise.rs
src/result/: mod.rs
src/test/: handle.rs  mod.rs  test_request.rs  test_response.rs  test_server.rs
tests/helpers/: schemaPathArgs.ts
(+39 files in other folders)
