[package]
edition = "2021"
name = "teocloud_teo"
version = "0.1.5"

[lib]
crate-type = ["cdylib"]

[dependencies]
teo = "0.1.5"
napi = { version = "2.14.1", default-features = false, features = ["napi5", "async", "chrono_date", "compat-mode"] }
napi-derive = "2.14.4"
chrono = { version = "0.4.31" }
bigdecimal = "=0.3.1"
once_cell = "1.19"
tokio = "1.0"
inflector-plus = "0.11.7"
bson = { version = "2.7.0", features = ["chrono-0_4", "serde_with"] }
indexmap = "2.1.0"
regex = "1.10.2"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
