[package]
edition = "2021"
name = "teocloud_teo"
version = "0.2.8"

[lib]
crate-type = ["cdylib"]

[dependencies]
teo = { version = "0.2.8", path = "../teo" }
napi = { version = "2.15.1", default-features = false, features = ["napi5", "async", "chrono_date", "compat-mode"] }
napi-derive = "2.15.1"
chrono = { version = "0.4.31" }
bigdecimal = "=0.3.1"
once_cell = "1.19"
tokio = "1.35.1"
inflector-plus = "0.11.7"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
indexmap = "2.1.0"
regex = "1.10.2"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
