[package]
edition = "2021"
name = "teodevgroup_teo"
version = "0.3.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
teo = { version = "0.3.1" }
teo-result = { version = "0.3.0", features = ["napi"] }
napi = { version = "2.16.13", default-features = false, features = ["napi5", "async", "chrono_date", "compat-mode"] }
napi-derive = "2.16.12"
chrono = { version = "0.4.31" }
bigdecimal = "=0.3.1"
once_cell = "1.19"
tokio = "1.35.1"
inflector-plus = "0.11.7"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
indexmap = "2.1.0"
time = "0.3.36"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hyper = { version = "1.5.0", features = ["full"] }
bytes = "1.8.0"
http-body-util = "0.1"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true

[patch.crates-io]
napi = { git = 'https://github.com/victorteokw/napi-rs', branch = 'release' }